[Web Payments] Use the correct PersonalDataManager in incognito

Before this change, adding an address in incognito mode from the
Payment Request editor would cause a Browser crash because Payment
Request attempted to use an ill-initiated PersonalDataManager's
URLRequestContext. This is because autofill uses the original
profile's PersonalDataManager rather than instantiate a new one.

This change brings Payment Request in line with autofill and uses
the original profile's PersonalDataManager, preventing the crash.

Bug: 755161
Change-Id: Iba1ca7cc86d2c0ef50030c4d9fe84c85c551b71f
Reviewed-on: https://chromium-review.googlesource.com/615185
Commit-Queue: Anthony Vallee-Dubois <anthonyvd@chromium.org>
Reviewed-by: Rouslan Solomakhin <rouslan@chromium.org>
Cr-Commit-Position: refs/heads/master@{#494432}
Former-commit-id: ef6e100e869af31681d62bfdb1b886e5cc18a963