chrome/browser/payments/chrome_payment_request_delegate.cc
@@ -71,8 +71,11 @@ void ChromePaymentRequestDelegate::ShowErrorMessage() {
 
 autofill::PersonalDataManager*
 ChromePaymentRequestDelegate::GetPersonalDataManager() {
+  // Autofill uses the original profile's PersonalDataManager to make data
+  // available in incognito, so PaymentRequest should do the same.
   return autofill::PersonalDataManagerFactory::GetForProfile(
-      Profile::FromBrowserContext(web_contents_->GetBrowserContext()));
+      Profile::FromBrowserContext(web_contents_->GetBrowserContext())
+          ->GetOriginalProfile());
 }
 
 const std::string& ChromePaymentRequestDelegate::GetApplicationLocale() const {
